--- a/main-desktop.html
+++ b/main-desktop.html
@@ -4,13 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="./index.css">
+    <title>Nueva Contrasena</title>
+    <link rel="stylesheet" href="./main-desktop.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <div>
+        <ul>
+            <li>
+                <a href="#">Mi Cuenta</a>
+            </li>
+            <li>
+                <a href="#">Mis Ordenes</a>
+            </li>
+            <li class="sign-out">
+                <a href="#" >Desconectar</a>
+            </li>
+        </ul>
+    </div>
 </body>
-</html>
